ensure that the text is readable for 4.5 seconds

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -23,7 +23,7 @@
                         line-height: calc(2.00em + 50%);
                         color: $color-light;
 			width: 90vw;
-			margin-left: -35vw;
+			margin-left: -25vw;
                 }
                 .move-up {
 			position: absolute;
